# picoforge

./: .dockerignore  .gitignore  00-START-HERE.md  LICENSE  Makefile  README.md  TEST-RESULTS.txt  docker-compose.yml  verify_e2e.js
.github/workflows/: build-and-test.yml  ui-ci.yml
.storybook/: main.ts  preview.ts
docker/: .dockerignore  Dockerfile  Dockerfile.dev
docker/scripts/: build.sh  dev.sh  test.sh
infra/: docker-compose.yml
infra/scripts/: cleanup.sh  setup.sh
pico-forge/: CMakeLists.txt  PROGRESS.md
pico-forge/include/picoforge/: picoforge.h  version.h
pico-forge/src/: main.cpp
pico-forge/src/config/: config.h  config_parser.cpp  config_parser.h  config_validator.cpp  config_validator.h
pico-forge/src/core/: code_generator.cpp  code_generator.h  code_injector.cpp  code_injector.h  dependency_injector.cpp  dependency_injector.h  module.cpp  module.h  module_factory.cpp  module_factory.h  module_registry.cpp  module_registry.h
pico-forge/src/generators/: cmake_generator.cpp  cmake_generator.h  main_generator.cpp  main_generator.h
pico-forge/src/modules/: adc_module.cpp  adc_module.h  dma_module.cpp  dma_module.h  gpio_module.cpp  gpio_module.h  i2c_module.cpp  i2c_module.h  multicore_module.cpp  multicore_module.h  pio_module.cpp  pio_module.h  pwm_module.cpp  pwm_module.h  spi_module.cpp  spi_module.h  timer_module.cpp  timer_module.h  uart_module.cpp  uart_module.h
pico-forge/src/utils/: error.h  error_codes.h  file_utils.cpp  file_utils.h  logger.cpp  logger.h  string_utils.cpp  string_utils.h
pico-forge/tests/fixtures/: sample_forge.json  sample_forge_adc.json  sample_forge_basic.json  sample_forge_comms.json  sample_main.cpp
pico-forge/tests/integration/: test_full_generation.cpp
pico-forge/tests/unit/: test_cmake_generator.cpp  test_code_generation_correctness.cpp  test_code_injector.cpp  test_config_parser.cpp  test_config_validator.cpp  test_main_generator.cpp  test_module_registry.cpp  test_modules_validate.cpp  test_runner.cpp  test_template_generation.cpp
web/backend/: package-lock.json  package.json  test_output.txt
web/backend/src/: app.js  config.js  index.js
web/backend/src/controllers/: build_controller.js  file_controller.js  project_controller.js  template_controller.js
web/backend/src/core/: error_handler.js  logger.js  validator.js
web/backend/src/data/: custom_blocks.json
web/backend/src/routes/: blocks.js  builds.js  files.js  projects.js  templates.js
web/frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/frontend/.storybook/: main.ts  preview.ts
web/frontend/src/: App.tsx  main.tsx
(+100 files in other folders)
